--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Unfair-dot-com/fec-main-carousel-proxy#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "path": "^0.12.7"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
