--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/Unfair-dot-com/fec-main-carousel-proxy#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
